@@ -108,7 +108,7 @@ default Unix process no 1 <i>runit</i>.
 </pre>
 To report success:
 <pre>
-  # ( uname -a ; cat /etc/runit/[123] ) | mail pape-runit-0.11.2@smarden.org
+  # ( uname -a ; cat /etc/runit/[123] ) | mail pape-runit-0.11.4@smarden.org
 </pre>
 <hr>
 
@@ -189,7 +189,7 @@ Use <b>init 6</b> to reboot and <b>init 0</b> to halt a system that runs
 <p>
 To report success:
 <pre>
-  # ( uname -a ; cat /etc/runit/[123] ) | mail pape-runit-0.11.2@smarden.org
+  # ( uname -a ; cat /etc/runit/[123] ) | mail pape-runit-0.11.4@smarden.org
 </pre>
 <h3>Step 5: Service migration</h3>
 The goal is to migrate all services from <i>/etc/rc.*</i> scheme to the
